# CLIGEBRA

./: .gitignore  LANGUAGE.md  README.md  main.py  pyproject.toml
examples/: basic.clg  cylinder.clg  test.clg
src/cligebra/: __init__.py  app.py  cli.py  renderer_bridge.py  renderer_window.py  scene.py
src/cligebra.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test/: testing.clg
