[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cligebra"
version = "0.1.0"
description = "Terminal-native linear algebra and analytic geometry workspace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.61.0",
    "numpy>=1.26",
    "pyvista>=0.44",
]

[project.scripts]
cligebra = "cligebra.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
